--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 
 <body>
-    <h1>Welcome to our new Banking Calculation</h1>
-
+    <h1 class="font-bold text-5xl text-center mt-10">Welcome to our new <span
+            class="font-extrabold text-violet-600 ">Banking
+            Calculation</span>!!!</h1>
     <script src="index.js"></script>
 </body>
 
