--- a/index.html
+++ b/index.html
@@ -9,9 +9,23 @@
 </head>
 
 <body>
-    <h1 class="font-bold text-5xl text-center mt-10">Welcome to our new <span
-            class="font-extrabold text-violet-600 ">Banking
-            Calculation</span>!!!</h1>
+    <header>
+        <h1 class="font-bold text-5xl text-center mt-10">Welcome to our new <span
+                class="font-extrabold text-violet-600 ">Banking
+                Calculation</span>!!!</h1>
+    </header>
+    <main>
+        <section class="bg-blue-100 w-9/12 mx-auto mt-12 p-8">
+            <h3 class="font-semibold text-3xl mb-4">Please Login</h3>
+            <div>
+                <input class="w-9/12 block mb-5 p-1 px-3" type="email" name="" id="" placeholder="Enter your Email">
+                <input class="w-9/12 block p-1 px-3 mb-4 " type="password" name="" id=""
+                    placeholder="Enter your password">
+                <button id="btn-submit"
+                    class="bg-amber-500 p-3 text-2xl font-medium rounded-lg text-white">Submit</button>
+            </div>
+        </section>
+    </main>
     <script src="index.js"></script>
 </body>
 
