--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
         <section class="bg-blue-100 w-9/12 mx-auto mt-12 p-8">
             <h3 class="font-semibold text-3xl mb-4">Please Login</h3>
             <div>
-                <input class="w-9/12 block mb-5 p-1 px-3" type="email" name="" id="" placeholder="Enter your Email">
-                <input class="w-9/12 block p-1 px-3 mb-4 " type="password" name="" id=""
+                <input class="w-9/12 block mb-5 p-1 px-3" type="email" name="" id="user-email"
+                    placeholder="Enter your Email">
+                <input class="w-9/12 block p-1 px-3 mb-4 " type="password" name="" id="user-password"
                     placeholder="Enter your password">
                 <button id="btn-submit"
-                    class="bg-amber-500 p-3 text-2xl font-medium rounded-lg text-white">Submit</button>
+                    class="bg-amber-500 p-3 text-2xl font-medium rounded-lg text-white hover:bg-sky-700">Submit</button>
             </div>
         </section>
     </main>
