--- a/home.html
+++ b/home.html
@@ -10,28 +10,47 @@
 
 <body>
     <header>
-        <h1 class="font-bold text-5xl text-center mt-10">Lets get's some <span
+        <h1 class="font-bold text-5xl text-center mt-10">Let's get some <span
                 class="font-extrabold text-violet-600 ">Moooooney</span>!!!</h1>
     </header>
     <main>
         <section class="mt-12">
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 w-9/12 mx-auto gap-4">
+            <div class="grid grid-cols-1 md:grid-cols-3 w-9/12 mx-auto gap-4">
                 <div class="bg-purple-500 p-8 rounded-xl">
                     <h2 class="font-medium text-2xl text-white">Deposit</h2>
-                    <h4 class="font-medium text-5xl text-white">$00</h4>
+                    <h4 class="font-medium text-5xl text-white">$<span id="update">00</span></h4>
                 </div>
                 <div class="bg-pink-500 p-8 rounded-xl">
                     <h2 class="font-medium text-2xl text-white">Withdraw</h2>
-                    <h4 class="font-medium text-5xl text-white">$00</h4>
+                    <h4 class="font-medium text-5xl text-white">$<span id="diduction">00</span></h4>
                 </div>
                 <div class="bg-green-500 p-8 rounded-xl">
                     <h2 class="font-medium text-2xl text-white">Balance</h2>
-                    <h4 class="font-medium text-5xl text-white">$1240</h4>
+                    <h4 class="font-medium text-5xl text-white">$<span id="calculation">1240</span></h4>
+                </div>
+            </div>
+        </section>
+        <!-- deposit and withdraw section -->
+        <section class="mt-24">
+            <div class="grid grid-cols-1 md:grid-cols-2 w-9/12 mx-auto gap-4">
+                <div class=" bg-sky-500 p-6 rounded-lg">
+                    <h2 class="text-2xl font-medium text-white mb-3 ">Please Deposit</h2>
+                    <input class="w-9/12 block mb-5 p-1 px-3" type="text" name="" id="deposit-amount"
+                        placeholder="$ amount you want to deposit">
+                    <button id="btn-deposit"
+                        class="bg-blue-800 p-1 px-4 text-white font-medium hover:bg-sky-400 rounded-lg">Deposit</button>
+                </div>
+                <div class=" bg-red-400 p-6 rounded-lg">
+                    <h2 class="text-2xl font-medium text-white mb-3">Withdraw Amount</h2>
+                    <input class="w-9/12 block mb-5 p-1 px-3" type="text" name="" id="withdraw-amount"
+                        placeholder="$ amount you want to Withdraw">
+                    <button id="btn-withdraw"
+                        class="bg-blue-800 p-1 px-4 font-medium text-white hover:bg-sky-400 rounded-lg">Withdraw</button>
                 </div>
             </div>
         </section>
     </main>
-    <script src="index.js"></script>
+    <script src="bank.js"></script>
 </body>
 
 </html>
